# HyprDisplays

./: .gitignore  CMakeLists.txt  README.md  debug_test.sh  hyprdisplays.desktop  resources.qrc  test_parsing.cpp
.github/workflows/: build-and-release.yml
src/: configmanager.cpp  configmanager.h  displaymanager.cpp  displaymanager.h  displaywidget.cpp  displaywidget.h  hyprlandinterface.cpp  hyprlandinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitorgraphicsview.cpp  monitorgraphicsview.h  visualmonitorwidget.cpp  visualmonitorwidget.h
